@@ -6,6 +6,8 @@ New features
 -
 Bug fixes
 ~~~~~~~~~
+- Fixed #1825 : "Make it possible to create a CPSDefault Site with a
+  CPS LDAP Setup extension".
 - Reorganized a bit the metadata layout, especially so that the now accessible
   preview image widget has enough room.
 New internal features
